--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.profiles.active=test
+spring.output.ansi.enabled=always
+logging.path=logs
+logging.file.max-history=20
+logging.level.com.example.demo = DEBUG
+logging.level.org.hibernate = DEBUG
