--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,13 +12,13 @@ spring:
     username: sa
     password: 1234
     driver-class-name: org.h2.Driver
-    initialization-mode: never
+    initialization-mode: always
     sql-script-encoding: UTF-8
   jpa:
     database-platform: H2
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
   server:
     max-http-header-size: 30000
 
