--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=test
 spring.output.ansi.enabled=always
-logging.path=logs
-logging.file.max-history=20
+logging.path=log
+logging.file.max-history=10
 logging.level.com.example.demo = DEBUG
