--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
-database: h2
+#database: h2
 spring:
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
   profiles:
     active: local
     include: real-oauth
@@ -7,7 +10,7 @@ spring:
     store-type: jdbc
   datasource:
     platform: h2
-    data: classpath*:db/${database}/data.sql
+    data: classpath*:db/${h2}/data.sql
     url: jdbc:h2:tcp://localhost/~/guhaedog
     username: sa
     password: 1234
