--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.output.ansi.enabled=always
 logging.path=log
 logging.file.max-history=10
 logging.level.com.example.demo = DEBUG
+spring.session.store-type=jdbc
