feat: Keep developing Sign in

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ logging.path=log
 logging.file.max-history=10
 logging.level.com.example.demo = DEBUG
 spring.session.store-type=jdbc
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
+spring.thymeleaf.cache=false
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
+spring.resources.add-mappings=true
