--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ logging.path=log
 logging.file.max-history=10
 logging.level.com.example.demo = DEBUG
 spring.session.store-type=jdbc
+spring.security.enable-csrf=false
