--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     database-platform: H2
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   devtools:
     livereload:
       enabled: true
