--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+//	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
+
+//		compile 'mysql:mysql-connector-java'
+	runtime('mysql:mysql-connector-java')
 }
