--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
   freemarker:
     cache: false
 
-
+#database: mysql
 #spring:
 #  profiles:
 #    active: local
@@ -39,7 +39,9 @@ spring:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 #    username: root
 #    password: 1234
-#    url: jdbc:mysql://localhost:3306/jpaexamplenk?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&useSSL=true&serverTimezone=UTC
+#    data: classpath*:db/${database}/data.sql
+#    initialization-mode: always
+#    url: jdbc:mysql://localhost:3306/Guhaedog?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&useSSL=true&serverTimezone=UTC
 #  jpa:
 #    database: mysql
 #    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
@@ -47,8 +49,7 @@ spring:
 #    generate-ddl: true
 #
 #    hibernate:
-#      ddl-auto: update
-
-
-
-
+#      ddl-auto: create
+#
+#
+#
