--- a/build.gradle
+++ b/build.gradle
@@ -46,5 +46,5 @@ dependencies {
 //	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
 
 //		compile 'mysql:mysql-connector-java'
-	runtime('mysql:mysql-connector-java')
+//	runtime('mysql:mysql-connector-java')
 }
