--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+	compile("org.mariadb.jdbc:mariadb-java-client")
 
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 //	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
