--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 HELP.md
 .gradle
-application-oauth.properties
 build/
 log/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
-!**/src/test/**
+!**/src/test/**application.yml
+!**/src/main/**application.yml
+!**/src/main/**application.properties
 
 
 ### STS ###
@@ -29,6 +30,8 @@ log/
 *.log
 out/
 
+
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -38,3 +41,4 @@ out/
 
 ### VS Code ###
 .vscode/
+!/.gitignore
