--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
 spring.security.enable-csrf=false
 
-spring.profiles.include=real-db
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.session.store-type=jdbc
+#spring.profiles.include=real-db
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.session.store-type=jdbc
