feat: remote server

--- a/src/main/resources/application-real-db.properties
+++ b/src/main/resources/application-real-db.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mariadb://guhaedogdb.c4ahwor36duc.ap-northeast-2.rds.amazonaws.com:3306/guhaedogDB
 spring.datasource.username=admin
 spring.datasource.password=gachon1234
