--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,17 +1,18 @@
-#spring:
-##  datasource:
-##   url: jdbc:h2:mem:testdb #
-##    username: sa
-##    password:
-##    driver-class-name: org.h2.Driver
-##  jpa:
-##  hibernate:
-##        ddl-auto: create
-#    #   properties:
-#    #      hibernate:
-#    #      show_sql: true
-#    #      format_sql: true
-#    #    open-in-view: false
-#  logging.level:
-#      org.hibernate.SQL: debug
-#    #  org.hibernate.type: trace
+spring:
+  session:
+    store-type: jdbc
+  datasource:
+    platform: h2
+
+    url: jdbc:h2:tcp://localhost/~/guhaedog
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+    sql-script-encoding: UTF-8
+  jpa:
+    database-platform: H2
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+
+
