--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,7 +3,6 @@ spring:
     store-type: jdbc
   datasource:
     platform: h2
-
     url: jdbc:h2:tcp://localhost/~/guhaedog
     username: sa
     password:
@@ -12,7 +11,13 @@ spring:
   jpa:
     database-platform: H2
     show-sql: true
-    hibernate:
-      ddl-auto: update
+    properties:
+      hibernate:
+        ddl-auto: update
+        format_sql: true
 
+
+
+hyeon:
+  name: "hyeonwoo"
 
