--- a/build.gradle
+++ b/build.gradle
@@ -43,4 +43,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-oauth2-client')
 	compile("org.mariadb.jdbc:mariadb-java-client")
 
+//	json handling
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.3'
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 }
