--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     show-sql: true
     properties:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       format_sql: true
 
 
