--- a/src/main/resources/application-real-db.properties
+++ b/src/main/resources/application-real-db.properties
@@ -1,6 +1,6 @@
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mariadb://guhaedogdb.c4ahwor36duc.ap-northeast-2.rds.amazonaws.com:3306/guhaedogDB
-#spring.datasource.username=admin
-#spring.datasource.password=gachon1234
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://guhaedogdb.c4ahwor36duc.ap-northeast-2.rds.amazonaws.com:3306/guhaedogDB
+spring.datasource.username=admin
+spring.datasource.password=gachon1234
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
