fix: Remove merge conflicts

--- a/src/main/resources/application-real-db.properties
+++ b/src/main/resources/application-real-db.properties
@@ -1,7 +1,6 @@
-database= MYSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mariadb://guhaedogdb.c4ahwor36duc.ap-northeast-2.rds.amazonaws.com:3306/guhaedogDB
 spring.datasource.username=admin
 spring.datasource.password=gachon1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.data = db/${database}/data.sql
+spring.datasource.data = classpath*:db/mysql/data.sql
