--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,4 @@
-spring:
+#spring:
 # datasource:
 # url: jdbc:h2:tcp://localhost/~/guhaedog
 # username: sa
@@ -12,8 +12,8 @@ spring:
 # show_sql: true
 # format_sql: true
 # open-in-view: false
-logging.level:
-  org.hibernate.SQL: debug
+#logging.level:
+#  org.hibernate.SQL: debug
 # org.hibernate.type: trace
 
 #spring:
@@ -37,3 +37,15 @@ logging.level:
 #hyeon:
 #  name: "hyeonwoo"
 #
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
