--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,6 @@ spring.thymeleaf.cache=false
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
-spring.profiles.include=oauth
-#spring.security.enable-csrf=false
+spring.security.enable-csrf=false
 #spring.profiles.include=real-db
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
